# Puzzle

./: .gitignore  CMakeLists.txt  Puzzle.kdev4  README.md  cilk_on_laptop.sh  measure.sh
.kdev4/: Puzzle.kdev4
dependencies/: CMakeLists.txt  libjpeg.so.8  libpng16.so.16  libwebp.so.6
dependencies/libgd-include/: CMakeLists.txt
libpuzzle/: CMakeLists.txt  puzzle_p.h
puzzlediff/: CMakeLists.txt  puzzle-diff.c
puzzlediff_cpp/: CMakeLists.txt  listdir.cpp  puzzle-diff.cpp
